tests/fail/120-fail-cow-slice.stderr
error: df-derive does not support `Cow<'_, str>` or `Cow<'_, [T]>` (unsized inner types). Use the owned type directly: `String` for borrowed strings, `Vec<T>` for borrowed slices.
 --> tests/fail/120-fail-cow-slice.rs:8:9
  |
8 |     bs: Cow<'static, [u8]>,
  |         ^^^^^^^^^^^^^^^^^^
